@@ -34,6 +34,7 @@
 using std::memcpy;
 using std::memset;
 using std::size_t;
+using std::string;
 
 Palette::Palette()
 	{
